--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800&family=Raleway+Dots&family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&family=Rubik+Moonrocks&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Grape+Nuts&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=My+Soul&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800&family=Raleway+Dots&family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&family=Rubik+Moonrocks&family=Updock&display=swap');
 html{
     scroll-behavior: smooth;
 }
@@ -16,7 +15,7 @@ body{
     background-color: #fafafa;
 }
 .container{
-    width: 90%;
+    width: 100%;
     min-height: 50vh;
     max-width: 1500px;
     margin: 0 auto;
@@ -40,6 +39,8 @@ footer{
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-    border: 1px solid;
+    color: white;
     width: 100%;
+    background-color: #333;
+    padding: 20px;
 }
