--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body{
     min-height: 100vh;
     background-color: #fafafa;
 }
+
 .container{
     width: 100%;
     min-height: 50vh;
@@ -22,6 +23,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 2em;
 }
 
 .red{
@@ -30,6 +32,16 @@ body{
 
 .green{
     color: green;
+}
+
+.back{
+    text-decoration: none;
+    color: white;
+    background-color: #333;
+    border-radius: 2px;
+    text-align: center;
+    padding:10px 10px;
+    border-radius: 2px;
 }
 
 footer{
