--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -40,3 +40,64 @@
 .topleft em{
     color: red;
 }
+
+.maisons{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.maison{
+    display: flex;
+    flex-direction: column;
+    width: 48%;
+    max-width: 500px;
+    background-color: white;
+    min-height: 400px;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1em;
+    box-shadow: 1px 0px 5px #eee;
+    overflow: auto;
+}
+
+.image_maison{
+    width: 100%;
+}
+
+.content{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+.content h3{
+    width: 200px;
+    font-size: 1rem;
+    font-family: Roboto;
+    font-weight: 300;
+}
+
+.indication{
+    min-width: 200px ;
+    color: #444;
+    text-decoration: underline;
+    font-style: italic;
+}
+
+.btngroup{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.btngroup a{
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: 200;
+    color: white;
+    cursor: pointer;
+    
+}
