--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -46,6 +46,8 @@
     align-items: flex-start;
     justify-content: space-around;
     width: 100%;
+    flex-wrap: wrap;
+    gap: 0.5em;
 }
 
 .maison{
@@ -100,4 +102,8 @@
     color: white;
     cursor: pointer;
     
+}
+
+.msg{
+    text-align: center;
 }
